manifests/chessi/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chessi
  namespace: chessi
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: chessi
  template:
    metadata:
      labels:
        app: chessi
    spec:
      imagePullSecrets:
        - name: gitea-registry
      containers:
        - name: chessi
          image: git.jmly.me/chessi/chessi:59fe31b
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 3000
          volumeMounts:
            - name: data
              mountPath: /app/data
          readinessProbe:
            httpGet:
              path: /
              port: http
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 20
            periodSeconds: 30
          resources:
            requests:
              cpu: 500m
              memory: 512Mi
            limits:
              cpu: "4"
              memory: 2Gi
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: chessi-data
