manifests/chessi/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chessi
  namespace: chessi
spec:
  selector:
    app: chessi
  ports:
    - name: http
      port: 80
      targetPort: http
