manifests/chessi/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: chessi
  namespace: chessi
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls.certresolver: letsencrypt
spec:
  ingressClassName: traefik
  rules:
    - host: chess.jmly.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: chessi
                port:
                  name: http
